--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "start": "node index.js"
   },
   "author": "egorystuff",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
+  }
 }
